Cherry-pick 275926@main (65fd9be34cc1). https://bugs.webkit.org/show_bug.cgi?id=270769

[JSC][Clang] DatePrototype.cpp(337,29): error: 'snprintf' will always be truncated; specified size is 28, but format string expands to at least 29 [-Werror,-Wformat-truncation]
    https://bugs.webkit.org/show_bug.cgi?id=270769

    Reviewed by Don Olmstead.

    Clang 18 reports a false warning:

    > JavaScriptCore/runtime/DatePrototype.cpp(337,29): error: 'snprintf' will always be truncated; specified size is 28, but format string expands to at least 29 [-Werror,-Wformat-truncation]

    This problem is tracked by <https://github.com/llvm/llvm-project/issues/71320>.

    * Source/JavaScriptCore/runtime/DatePrototype.cpp:
    Ignore the warning for Clang.

    Canonical link: https://commits.webkit.org/275926@main

Canonical link: https://commits.webkit.org/274313.90@webkitglib/2.44